src/test/deca/syntax/valid/variables.deca
// Description:
//    Minimalistic program to test variable usage.
//
// Results:
//    None
//
// History:
//    Created on 19/01/2025
{
    int x = 10;
    float y = 5.5;
    boolean b = true;
    print(x + y, b && false, x == 10);
}
