src/test/deca/syntax/invalid/no_point.deca
// Description:
//    Program testing the raising of an exception.
//
// Results:
//    Line 10: no viable alternative at input '}'
//
// History:
//    Created on 19/01/2025
{
    int x = 5  

}

